--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: > # this means to ignore newlines until "baseurl:"
 # do NOT forget to uncomment the google analytics
 # before publishing this site to the production enviroment
 #
-baseurl: ""     # dev path
+baseurl: "/TestScoreGuide"     # dev path
 url: "http://testscoreguide.org" # the base hostname & protocol for your site
 
 
